# pay-cli

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  e2e.yml  release.yml
aur/: PKGBUILD
choco/: pay-cli.nuspec
choco/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
snap/: snapcraft.yaml
src/: auth.rs  config.rs  eip3009.rs  error.rs  keystore.rs  main.rs  os_auth.rs  ows.rs  permit.rs
src/commands/: direct.rs  discover.rs  init.rs  key.rs  mod.rs  network.rs  ows_cmd.rs  request.rs  sign.rs  signer_cmd.rs  status.rs  tab.rs  update.rs  wallet.rs  webhook.rs
src/signer/: keyring.rs  keystore.rs  mod.rs  password.rs
tests/: e2e.rs  signer.rs
wix/: pay.wxs
