[package]
name = "pay-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for pay — payment infrastructure for AI agents"
license = "MIT"
repository = "https://github.com/remit-md/pay-cli"

[[bin]]
name = "pay"
path = "src/main.rs"

[features]
default = ["keychain"]
keychain = ["dep:keyring"]

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"], optional = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "string"] }
comfy-table = "7"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
getrandom = "0.3"
scrypt = "0.11"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
hostname = "0.4"
chrono = "0.4"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
