[package]
name = "pay-cli"
version = "0.2.1"
edition = "2021"
description = "CLI for pay — payment infrastructure for AI agents"
license = "MIT"
repository = "https://github.com/pay-skill/pay-cli"

[[bin]]
name = "pay"
path = "src/main.rs"

[features]
default = ["keychain"]
keychain = ["dep:keyring"]

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"], optional = true }
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env", "string"] }
comfy-table = "7"
dirs = "6"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.11"
aes-gcm = "0.10"
hex = "0.4"
getrandom = "0.4"
scrypt = "0.11"
zeroize = { version = "1", features = ["derive"] }
rpassword = "7"
hostname = "0.4"
chrono = "0.4"
tempfile = "3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_WinRT",
]

[target.'cfg(windows)'.dependencies.windows-future]
version = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/pay-{ target-family }-{ target-arch }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides]
x86_64-unknown-linux-gnu = { pkg-url = "{ repo }/releases/download/v{ version }/pay-linux-amd64" }
aarch64-unknown-linux-gnu = { pkg-url = "{ repo }/releases/download/v{ version }/pay-linux-arm64" }
x86_64-apple-darwin = { pkg-url = "{ repo }/releases/download/v{ version }/pay-macos-amd64" }
aarch64-apple-darwin = { pkg-url = "{ repo }/releases/download/v{ version }/pay-macos-arm64" }
x86_64-pc-windows-msvc = { pkg-url = "{ repo }/releases/download/v{ version }/pay-windows-amd64.exe" }

[profile.release]
strip = true
lto = true
